--- a/3roB.html
+++ b/3roB.html
@@ -112,30 +112,9 @@
                                             <p class="card-text">El sabor que te hace sonreír en cada bocado.</p>
 
                                         </div>
-<!-- Inicio Button modal -->
-    <a><button id="abrirModal1"><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a>
+  <a href="https://drive.google.com/file/d/14b-w11cZBPEunF1iv4xOv0nLctBO2KuH/view?usp=sharing" target="_blank"> 
+									  <button><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a> 
 
-    <dialog id="miModal1">
-        <h2>¡Lo lamentamos!</h2>
-        <p>No tenemos información para mostrarte.</p>
-        <button id="cerrarModal1">Cerrar</button>
-    </dialog>
-
-    <script>
-        const abrirModal1 = document.getElementById('abrirModal1');
-        const miModal1 = document.getElementById('miModal1');
-        const cerrarModal1 = document.getElementById('cerrarModal1');
-
-        abrirModal1.addEventListener('click',   
- () => {
-            miModal1.showModal();
-        });
-
-        cerrarModal1.addEventListener('click', () => {
-            miModal1.close();
-        });
-    </script>
-								<!-- Fin Button modal -->
 
                                       
                                       
