--- a/3roA.html
+++ b/3roA.html
@@ -86,31 +86,11 @@
                                             <p class="card-text">El sabor de lo simple, el placer de lo delicioso.</p>
 
                                         </div>
-                                      <!-- Inicio Button modal -->
-    <a><button id="abrirModal"><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a>
 
-    <dialog id="miModal">
-        <h2>¡Lo lamentamos!</h2>
-        <p>No tenemos información para mostrarte.</p>
-        <button id="cerrarModal">Cerrar</button>
-    </dialog>
-
-    <script>
-        const abrirModal = document.getElementById('abrirModal');
-        const miModal = document.getElementById('miModal');
-        const cerrarModal = document.getElementById('cerrarModal');
-
-        abrirModal.addEventListener('click',   
- () => {
-            miModal.showModal();
-        });
-
-        cerrarModal.addEventListener('click', () => {
-            miModal.close();
-        });
-    </script>
-								<!-- Fin Button modal -->
-
+					   <a href="https://drive.google.com/file/d/1aJyZGlruZWcJix9DfRsVn9K07Ogb80xv/view?usp=sharing" target="_blank"> 
+									  <button><i class="bi bi-instagram" style="color: white;"></i> + Info</button></a> 
+                                    
+                                     
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-3">
